added SDL2 backend

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,3 @@
 TODO: 
-	NEED TO CUT THE FRAMES FROM 1 SPRITE SHEET 
-DONE: 
-	i need some way to copy a independent pixel array to d3d9Device surface [X]
+	NEED TO CUT THE FRAMES FROM 1 SPRITE SHEET, DRAWING TILED SPRITE
+DONE: i need some way to copy a independent pixel array to d3d9Device surface [X]
