move the game code to a different class (MetalSlug)

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
 TODO: 
-	NEED TO CUT THE FRAMES FROM 1 SPRITE SHEET, DRAWING TILED SPRITE
-DONE: i need some way to copy a independent pixel array to d3d9Device surface [X]
+	GAME LOOP WITH GOOD TIMING IN SDL2 (2h) []
+	ROUGH CONTROL (2h) []
+	ROUGH ANIMATION SYSTEM (2h) []
+	PLATFORM INDEPENDENT THE WHOLE THING (2h) []
+DONE: 
