things ready for to make the rectangle moving

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 TODO: 
+	GET THE GAME INPUT WORKING (1h) []
+
 	GAME LOOP WITH GOOD TIMING IN SDL2 (2h) []
 	ROUGH CONTROL (2h) []
 	ROUGH ANIMATION SYSTEM (2h) []
