change the timing code and now it works good

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 TODO: 
-	GET THE GAME INPUT WORKING (1h) []
-
-	GAME LOOP WITH GOOD TIMING IN SDL2 (2h) []
-	ROUGH CONTROL (2h) []
+	DOUBLE BUFFERING SO THAT WE DON'T SEE THE TEAR ON THE SCREEN (2h) []
 	ROUGH ANIMATION SYSTEM (2h) []
-	PLATFORM INDEPENDENT THE WHOLE THING (2h) []
 DONE: 
+	GAME LOOP WITH GOOD TIMING IN SDL2 (2h) [X]
+	GET THE GAME INPUT WORKING (1h) [X]
+	ROUGH CONTROL (2h) [X]
+	PLATFORM INDEPENDENT THE WHOLE THING (2h) [X] (kind of)
