--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
 TODO: 
-	DOUBLE BUFFERING SO THAT WE DON'T SEE THE TEAR ON THE SCREEN (2h) []
 	ROUGH ANIMATION SYSTEM (2h) []
+
 DONE: 
+	DOUBLE BUFFERING SO THAT WE DON'T SEE THE TEAR ON THE SCREEN (2h) [X] - we still saw the tear, kinda :))
 	GAME LOOP WITH GOOD TIMING IN SDL2 (2h) [X]
 	GET THE GAME INPUT WORKING (1h) [X]
 	ROUGH CONTROL (2h) [X]
