now we can set a fixed position for the Animation

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,11 @@
 TODO: 
-	ROUGH ANIMATION SYSTEM (2h) []
+	USING TILED SPRITE SHEET (2h) []
+	NORMALIZED COORDINATE SYSTEM (4h) []
 
+	ROUGH CAMERA SYSTEM (4h) []
+	ROUGH PHYSICS (COLLISION) (2h) []
 DONE: 
+	ROUGH ANIMATION SYSTEM (2h) [X]
 	DOUBLE BUFFERING SO THAT WE DON'T SEE THE TEAR ON THE SCREEN (2h) [X] - we still saw the tear, kinda :))
 	GAME LOOP WITH GOOD TIMING IN SDL2 (2h) [X]
 	GET THE GAME INPUT WORKING (1h) [X]
