--- a/TODO.txt
+++ b/TODO.txt
@@ -6,11 +6,23 @@ TODO:
 			-> line collision 
 			-> capsule collision 
 
-		-> MOVING: []
-			basic movement using vector (maybe)
+		PHAKE PHYSICS: @Current
+			all the physics will be just state machine and interpolation with different ease function
+			state: 
+				jump -> from bottom to peak 
+				fall -> from peak to bottom (or some ) -> gravity is just fall state 
+				onground -> just pure left and right move - no fall, no jump
 
-		-> JUMPING: []
-			-> jump arc 
+			let's consider moving (left, right - raw translate no animation or anything) is not a state machine:)) 
+				-> so that it can combine with both jump and fall 
+
+			 -> PHYSICS STATE MACHINE DIFFERENT FROM ANIMATION STATE MACHINE 
+			 -> LET'S MAKES A PHYSICS STATE MACHINE: 
+				state: 
+					onground -> just pure left and right move - no fall, no jump @1st 
+					jump -> from bottom to peak 
+					fall -> from peak to bottom (or some ) -> gravity is just fall state 
+				
 
 
 	DESTROY ALL THE FONT RESOURCES AFTER USING (SDL DESTROY) -> CURRENTLY HAVE MEMORY LEAKS (1H) []
