currently have the physics state machine working pretty nicely, just need to fix the go too fast issue then tweaks some other stuff and that all good

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@ TODO:
 			-> line collision 
 			-> capsule collision 
 
-		PHAKE PHYSICS: @Current
+		PHAKE PHYSICS: @Current - done 50%
 			all the physics will be just state machine and interpolation with different ease function
 			state: 
 				jump -> from bottom to peak 
