--- a/TODO.txt
+++ b/TODO.txt
@@ -23,33 +23,25 @@ TODO:
 					jump -> from bottom to peak 
 					fall -> from peak to bottom (or some ) -> gravity is just fall state 
 
+	ROUGH CAMERA SYSTEM (4h) []
+		-> load the mission1_level and test the camera 
 
-
-	DESTROY ALL THE FONT RESOURCES AFTER USING (SDL DESTROY) -> CURRENTLY HAVE MEMORY LEAKS (1H) []
+	INPUT BUFFERING FOR GAMEPLAY MOVEMENT (4h) []
 
 	FIX: black background when having transparent background (2h) 
 		(normal rendering works, only the portion not working) []
 		(NOTE: test on the sdl2 backend)
 
-	ROUGH CAMERA SYSTEM (4h) []
-		-> have a stitched image of mission 1 and display in and test the camera 
-		-> this program seems promising: https://github.com/SSARCandy/panoramas-image-stitching
-					   this vid as well: https://www.youtube.com/watch?v=Zs51cg4mb0k&ab_channel=NicolaiNielsenkj
+	DESTROY ALL THE FONT RESOURCES AFTER USING (SDL DESTROY) -> CURRENTLY HAVE MEMORY LEAKS (1H) []
+
+	ATTACH THE COLLIDER WITH THE ANIMATION (4h) []
+
+	PLACE ALL THE STUFF ON THE LEVEL (4h) []
 
 	PARALAX BACKGROUND (2h) []
 
-	INPUT BUFFERING FOR GAMEPLAY MOVEMENT (4h) []
-
-	COLLIDER COMBINATION FOR DIFFERENT SHAPES () []
-		-> basically circle and rectangle -> capsule shape  
-
-		-> can show part of the screen and move around 
-
 	PHAN HOACH KHONG GIAN (4h) []
 
-	USING TILED SPRITE SHEET (2h) []
-		-> FUTURE:  write a python program (or a class in the game itself) to take an abitrary sprite sheet 
-					and output the frames into a json file which contains the rect of each frames 
 BUG: 
 	FULLSCREEN BUG: AFTER TOGGLE THE FULLSCREEN VS SMALLSCREEN, TEXTURE TURN BLACK
 	FLICKERING WHEN MOVING (2h) []
