--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,13 @@
 TODO: 
 	HAVE A DATASTRUCTURE FOR ANIMATION (4h) []
-		-> load the animation using the data structure 
-		target: Load Marco Rossi character 
-			-> first loading the first half 
-			-> load the second half 
+		-> load the animation using the data structure [X]
+		target: Load Marco Rossi character [X]
+			-> first loading the first half [X]
+			-> load the second half @Current 
 			-> attach both of them 
 
 	ATTACH THE ANIMATION WITH THE COLLIDER (4h) []
-		-> just attach animation pos with the collider, that will work 
+		-> just attach animation pos with the collider, that will work [X]
 
 	FIX: black background when having transparent background (2h) 
 		(normal rendering works, only the portion not working) []
