--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,4 @@
 TODO: 
-#endif
-	FIX: black background when having transparent background (2h) 
-		(normal rendering works, only the portion not working) []
-		(NOTE: test on the sdl2 backend)
-
-	DO THE ACTUAL GOOD LOOKING ANIMATION (2h) []
-
 	THE ANIMATION FRAME CENTERING AND STUFF 
 		-> we can't just calculate the rect using center anymore 
 			since it's not looking good 
@@ -14,9 +7,18 @@ TODO:
 				-> @Dothis Idea: may be have a relative width and height to compare (the largest width or height in the all the frames)
 					-> if the frames as big as the relative width or height -> stretch to the full rect
 					-> else if not as big -> stretch relatively 
+		Problems: 
+			+ The size of each frames is different from each other, matching the center of all of them together don't work 
+			+ The position of each frames is also different  
+
+		@Use this 
+		-> the way to solve this problem is: take all the burden to photoshop and solve it there :)) 
+		just edit the image into usable tiledsprite with rows and columns
+		have a whole animation coordinate rect and rows and columns (3 info, whole animation rect, rows, columns)  
+
+	DO THE ACTUAL GOOD LOOKING ANIMATION (2h) []
 
 	REFACTOR THE PLAYER RELATED CODE INTO PLAYER CLASS (2h) []
-
 
 	LOAD THE ANIMATION METADATA FROM A FILE SO THAT NO NEED TO RECOMPILE (2h) []
 
@@ -49,10 +51,13 @@ TODO:
 	DESTROY ALL THE FONT RESOURCES AFTER USING (SDL DESTROY) -> CURRENTLY HAVE MEMORY LEAKS (1H) []
 
 BUG: 
-	FULLSCREEN BUG: AFTER TOGGLE THE FULLSCREEN VS SMALLSCREEN, TEXTURE TURN BLACK
 	THE FRAMES LOOK DISTORED BECAUSE THE CALCULATED AXIS IS KINDA OFF []  
 	
 DONE: 
+	FULLSCREEN BUG: AFTER TOGGLE THE FULLSCREEN VS SMALLSCREEN, TEXTURE TURN BLACK
+	FIX: black background when having transparent background (2h) 
+		(normal rendering works, only the portion not working) [X]
+
 	FIX THE SLOW UPDATING OF MOVING IMAGE FIRST THEN SOLVE THIS ONE LATER  [X]
 
 	FIX: THERE ARE SOME FLICKERING WITH THE OLD POSITION WHEN CHANGING TO THE NEXT ANIMATION [X]
