--- a/TODO.txt
+++ b/TODO.txt
@@ -1,20 +1,9 @@
-TODO: 
-	ANIMATION SPRITESHEET PROBLEM: 
-		@Use this 
-		-> the way to solve this problem is: take all the burden to photoshop and solve it there :)) 
-		just edit the image into usable tiledsprite with rows and columns
-		have a whole animation coordinate rect and rows and columns (3 info, whole animation rect, rows, columns)  
+DEADLINE: 
+	Animation work til the end of this week (26/7/2023)
+	The next week we will work on the actual level1: map, camera, enemies placement  
 
-		Problems: if we just plainly stiched all of them together then there will be so so much animation for the main character
-		-> we stiched each part of him and attached them in the game ?? 
-		-> but it will be kinda hard since it's not enterly precise :)) -> fun little weekend project ?? 
-		-> Brief calculation: 
-			the legs have 4 state 
-			the body have: 
-				4 shooting state
-				n emotional state 
-			-> 4 *4n = mot dong animation can phai lam 
-		-> the legs and the uppor should be different 
+TODO: 
+	FINISH THE BASIC SPRITESHEET ANIMATION FOR THE PLAYER IN PTS (2h) [] @Current - the leg is still not done 
 
 	DO THE ACTUAL GOOD LOOKING ANIMATION (2h) []
 
@@ -34,6 +23,8 @@ TODO:
 												the boss fight and houses and things could wait 
 
 	INPUT BUFFERING FOR GAMEPLAY MOVEMENT (4h) []
+
+	CLEAN THE PROJECT STRUCTOR: EACH BACKEND IN IT'S OWN FOLDER (1h) []
 
 
 	WHEN SHOULD WE WRITE A LEVEL EDITOR ?? []
