--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,10 @@ TODO:
 		have the camera working [X]
 			the camera will move with the player when the player go about 1/3 of the width 
 
-		have all the colliders in place as well []
+		have all the colliders in place as well [] @Current 
+			-> first figure out all the collider rects in PTS first []
+			-> then write it out in a datastructure then load into the map  []
+			-> NEED ONE WAY PLATFORM (2h) []
 
 		place hostages into places, with animation []
 
